Closed Bug 1664547 Opened 4 years ago Closed 4 years ago

ThreadSanitizer: data race [@ mozilla::ScriptPreloader::InvalidateCache] vs. [@ mozilla::ScriptPreloader::Run] on mCacheInvalidated

Categories

(Core :: XPConnect, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox82 --- wontfix
firefox83 --- fixed

People

(Reporter: decoder, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on try (parent revision is mozilla-central dc90a7a18c07)

For detailed crash information, see attachment.

This looks bad, we are writing mCacheInvalidated and at the same time checking it to decide if we should sleep for 10 seconds or not while there is a comment about shutdown hangs right next to it.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Kris, could you take a look at this?

Flags: needinfo?(kmaglione+bmo)

S2

Severity: -- → S2
Priority: -- → P2
Flags: needinfo?(kmaglione+bmo)
Assignee: nobody → kmaglione+bmo
Status: NEW → ASSIGNED
Pushed by maglione.k@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/c4a61051bef8
Hold mSaveMonitor while changing mCacheInvalidated. r=mccr8
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Kris, could this have resulted in shutdown hangs or any other bad side effects?

Flags: needinfo?(kmaglione+bmo)

(In reply to Christian Holler (:decoder) from comment #7)

Kris, could this have resulted in shutdown hangs or any other bad side effects?

Unlikely.

Flags: needinfo?(kmaglione+bmo)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: