Bug 1664547: Hold mSaveMonitor while changing mCacheInvalidated. r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D91985